FEAT: Select Your Shoe Size functionality
- When a customer visits the website for the first time,
display a pop-up with a form that requests their shoe size
- The form includes a dropdown menu with sizes ranging
from 2.5 to 14.5, with 0.5 size increments
- Store the selected value
- The pop-up won't be displayed again, even if the customer clicks "Cancel".
- On the Product Listing Page (PLP), when a product has a variant with the
previously selected size option, ensure that when the customer opens the product,
it defaults to that variant.
- No media queries used for styling

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -335,4 +335,13 @@
       <script src="{{ 'predictive-search.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
   </body>
+
+  {% comment %}
+    Render the select shoe size pop-up modal.
+    Don't show it on the product page, as there is already the option to select the size.
+  {% endcomment %}
+  {% unless template == 'product' %}
+    {%- render 'size-selector-modal' -%}
+  {% endunless %}
+
 </html>
